# CompetitiveProgramming

./: .gitignore  .ninja_deps  .ninja_log  .nvim.lua  13E_Holes.cpp  14025_BotFriends2.cpp  1416D_GraphAndQueries.cpp  1513D_GCDAndMST.cpp  1528A_ParsaHumongousTree.cpp  1630C_PaintTheMiddle.cpp  1635E_Cars.cpp  2019A.cpp  2019C.cpp  2026D.cpp  2037H_SharkySurfing.cpp  2042A.cpp  2042B.cpp  2042D.cpp  2042E.cpp  2065A.cpp  2065C2.cpp  2065D.cpp  2065E.cpp  2065F.cpp  2072G.cpp  2107A.cpp  2110A.cpp  2110D.cpp  2110E.cpp  2124A.cpp  2127E.cpp  2127F.cpp  2130A.cpp  2130B.cpp  2130D.cpp  2130E.cpp  2130F.cpp  2132A.cpp  2132B.cpp  2132D.cpp  (+103 more)
BestOriginalSolves/: 103886L_FossilExcavation.cpp  1244E_MinimizingDifference.cpp  1472G_MovingToTheCapital.cpp  2017Silver3_WheresBessie.cpp  2025D.cpp  2026C.cpp  2118E_GridColoring.cpp  2123G_ModularSorting.cpp  2128E2.cpp  626E_SimpleSkewness.cpp  ClosestCowWins.cpp  Gold2_DirectoryTraversal.cpp  Platinum1_Delegation.cpp
CIS4930_TA/: FunnyMacro.cpp  Midterm_Greedy.cpp  Midterm_Pattern.cpp  Rmryan.cpp  getCodeforcesContest.py  printSubmissionTimes.py  problemStatements.txt
CSES/: DistinctColors.cpp  DistinctColorsSmallToLarge.cpp  EditDistance.cpp  GiantPizza.cpp  GridPaths.cpp  HamiltonianFlights.cpp  HousesAndSchools.cpp  IntersectionPoints.cpp  MaximumBuilding1.cpp  PathQueriesII.cpp  StaticRangeQueries.cpp  SubtreeQueries.cpp
Codeforces/: 1017D.cpp  104468H_AmmarutifulArray.cpp  1082E_IncreasingFrequency.cpp  1108F_MSTUnification.cpp  1117C.cpp  1147C_ThanosNim.cpp  1176E.cpp  1208F_BitsAndPieces.cpp  1223C_SaveNature.cpp  (+77 more)
(+1285 files in other folders)
